@@ -232,7 +232,7 @@ public class CopyrightManager {
       String charset = file.getCharset(true);
 
       reader = new BufferedReader(new InputStreamReader(file.getContents(), charset));
-      buffer = new StringWriter(new Long(f.length()).intValue());
+      buffer = new StringWriter(Long.valueOf(f.length()).intValue());
       writer = new PrintWriter(buffer);
 
       // Reads the first line of the file
@@ -683,17 +683,17 @@ public class CopyrightManager {
           }
         }
       }
+      HeaderFormat format = getHeaderFormat(settings, file, ct);
+      if ( format == null ) {
+        // No format defined for this content type or its parents
+        return false;
+      } else if ( format.isExcluded() ) {
+        // Content type excluded from copyright
+        return false;
+      }
 
       // Checks if the file already have a header
       if ( ! settings.isForceApply() ) {
-        HeaderFormat format = getHeaderFormat(settings, file, ct);
-        if ( format == null ) {
-          // No format defined for this content type or its parents
-          return false;
-        } else if ( format.isExcluded() ) {
-          // Content type excluded from copyright
-          return false;
-        }
         reader = new BufferedReader(new InputStreamReader(file.getContents()));
         String line = reader.readLine();
         if ( line != null && format.skipFirstLine(line) ) {
